testsuite/poke.pkl/union-diag-9.pk
/* { dg-do compile } */

/* Labels are now allowed in unions.  */

type Foo = union
  {
    int a : a != 10;
    int b @ 1#B; /* { dg-error "" } */
  };
